--- a/sa-webapp/pom.xml
+++ b/sa-webapp/pom.xml
@@ -33,6 +33,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		    <!-- Spring for Apache Kafka -->
+			<dependency>
+				<groupId>org.springframework.kafka</groupId>
+				<artifactId>spring-kafka</artifactId>
+				<version>1.3.10.RELEASE</version>
+			</dependency>
+
+			<!-- Jackson for JSON handling -->
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+			</dependency>
 	</dependencies>
 
 	<build>
